--- a/default.project.json
+++ b/default.project.json
@@ -1,6 +1,14 @@
 {
   "name": "PromptRegionTrigger",
   "tree": {
-    "$path": "src"
+    "$className": "Folder",
+    "roblox_packages": {
+      "$path": {
+        "optional": "roblox_packages"
+      }
+    },
+    "src": {
+      "$path": "src"
+    }
   }
 }
